# aws-reflex

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/aws_reflex/: __init__.py  factory.py  lambda_function.py
src/aws_reflex/ec2/: __init__.py  factory.py
src/aws_reflex/ec2/handlers/: __init__.py  base.py  base_c2_handler.py  c2_activity.py  c2_dns_activity.py
src/aws_reflex/handlers/: base.py
tests/ec2/: test_handlers.py  test_ssm_utils.py
