[project]
name = "aws-reflex"
version = "0.1.0"
description = "Library package containing classes for different SOAR scenarios."
readme = "README.md"
authors = [
    { name = "Andrew McKenzie", email = "mckenzie.andrew@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.8",
    "boto3-stubs[ec2,guardduty,sns,ssm]>=1.40.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
